# YoloONNX

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.onnx  Dockerfile.openvino  Dockerfile.tflite  README.md  app.py  confidence_evaluator.py  config.py  coral-tpu.Dockerfile  cuda.Dockerfile  detector_backend.py  detector_factory.py  intel-gpu.Dockerfile  label.py  labelmap.txt  main.py  nvidia-trt.Dockerfile  onnx.Dockerfile  onnx_detector.py  openvino.Dockerfile  prediction_saver.py  pyproject.toml  requirements-common.txt  requirements-dev.txt  requirements-onnx.txt  requirements-tflite.txt  tensorrt.Dockerfile  tflite.Dockerfile
.github/workflows/: coverage.yml  docker.yml  lint.yml  publish.yml  tests.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-03-25_22-29-52Z-onnx-backend-integration-plan.md  2026-03-25_22-38-43Z-adding-second-inference-backend-for-onnx.md  2026-03-25_22-38-43Z-onnx-implementation-path-research.md
docker/: cuda.Dockerfile  onnx.Dockerfile  openvino.Dockerfile  tensorrt.Dockerfile  tflite.Dockerfile
src/sidecar/: __init__.py  live.py
src/yolo_frigate/: __main__.py  app.py  calibration_dataset.py  confidence_evaluator.py  config.py  detector_backend.py  detector_factory.py  label.py  main.py  model_artifact.py  prediction.py  prediction_saver.py  runtime_profile.py  (+2 more)
tests/: labelmap.txt  labelmap.yml  test_app.py  test_calibration_dataset.py  test_confidence_evaluator.py  test_config.py  test_detector_factory.py  test_model_artifact.py  test_onnx_detector.py  test_parse_labels.py  test_ultralytics_support.py
(+16 files in other folders)
